⚙️ place param in settings and use defaults no border

--- a/settings/settings.default.json
+++ b/settings/settings.default.json
@@ -1,4 +1,11 @@
 {
+    "mpvParams": [
+      "--hr-seek=yes",
+      "--no-config",
+      "--cache=yes",
+      "--no-border",
+      "--no-osc"
+    ],
     "service": {
         "spacebro": {
             "host": "178.62.66.181",
