⚙️ add debug option to settings

--- a/settings/settings.default.json
+++ b/settings/settings.default.json
@@ -1,6 +1,7 @@
 {
     "mpv":{
-      "verbose": true
+      "verbose": true,
+      "debug": true
     },
     "mpvParams": [
       "--hr-seek=yes",
